# reduced-order-modelling-of-gravitational-waves

./: .gitignore  pyproject.toml  requirements.txt
models/NS/NonLinRegV1/2,1/amplitude/: interpolation_matrix.npy  model.keras
models/NS/NonLinRegV1/2,1/phase/: interpolation_matrix.npy  model.keras
models/NS/NonLinRegV1/2,2/amplitude/: interpolation_matrix.npy  model.keras
models/NS/NonLinRegV1/2,2/phase/: interpolation_matrix.npy  model.keras
notebooks/: 0.0.0 parameter_spaces.ipynb  0.0.1 fiducial_waveforms.ipynb  0.1.0 reduced_bases.ipynb  0.3.0 ann_hyperparams.ipynb  0.3.0 ann_training.ipynb  0.3.1 ann_training.ipynb  0.3.2 model_finalisation.ipynb  0.3.3 model_finalisation.ipynb  01 parameter_spaces.ipynb  03 rbs.ipynb  05 data_scaling.ipynb  06 ann_training_pipeline.ipynb  07 waveform_reconstruction.ipynb  1.0.0 waveform_reconstruction.ipynb  quick_tests.ipynb
scripts/: finalise_mode_rom.py  generate_fiducial_waveforms.py  generate_parameter_space.py  generate_surrogate_waveforms.py  greedy_ei.py  greedy_rb.py  offline_ml_pipeline.sh  offline_numerical_pipeline.sh  train_ann.py
src/romgw/: generate_waveform.py
src/romgw/config/: constants.py  env.py  types.py  validation.py
src/romgw/deep_learning/: core.py  hyper.py  io.py  preprocessing.py
src/romgw/maths/: core.py  ei.py  rb.py
src/romgw/model/: core.py
src/romgw/plotting/: core.py  custom_config.py
src/romgw/typing/: core.py  exceptions.py  helpers.py  utils.py
src/romgw/utils/: filesystem.py
src/romgw/waveform/: base.py  context.py  dataset.py  params.py  stat.py  typing.py  utils.py
(+19 files in other folders)
